completed sub-phase 2.3